--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "better-sqlite3": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
